update html and add cox ph recitation ioslides

--- a/ipw-cox.html
+++ b/ipw-cox.html
@@ -496,33 +496,33 @@ data mle.c; merge a n d;
     drop _level_;
 run; quit;
 proc print data=mle.c(obs=10); run;</code></pre>
-<pre><code>##  Obs            t delta  art  drop id idu white age cd4 _LEVEL_   num
+<pre><code>##  Obs  id  idu  white  age  cd4  drop  delta   art      t    _LEVEL_    num
 ## 
-##    1        2.245   1    .      0   1  1    0    44 376    1    0.37715
-##    2        1.213   1    .      0   2  1    1    32 392    1    0.37715
-##    3           10   0   1.224   0   3  0    0    44 181    1    0.37715
-##    4         1.24   1    .      0   4  1    0    35 526    1    0.37715
-##    5        7.871   1    .      0   5  1    1    46 386    1    0.37715
-##    6        6.593   1   2.207   0   6  0    1    29 285    1    0.37715
-##    7        1.191   1    .      0   7  1    0    34 358    1    0.37715
-##    8        5.098   1   2.300   0   8  0    1    39 708    1    0.37715
-##    9        2.226   1    .      0   9  1    0    45 840    1    0.37715
-##   10        8.761   1    .      0  10  0    0    47 274    1    0.37715
+##    1   1   1     0     44  376    0     1     .      2.245     1     0.37715
+##    2   2   1     1     32  392    0     1     .      1.213     1     0.37715
+##    3   3   0     0     44  181    0     0    1.224  10.000     1     0.37715
+##    4   4   1     0     35  526    0     1     .      1.240     1     0.37715
+##    5   5   1     1     46  386    0     1     .      7.871     1     0.37715
+##    6   6   0     1     29  285    0     1    2.207   6.593     1     0.37715
+##    7   7   1     0     34  358    0     1     .      1.191     1     0.37715
+##    8   8   0     1     39  708    0     1    2.300   5.098     1     0.37715
+##    9   9   1     0     45  840    0     1     .      2.226     1     0.37715
+##   10  10   0     0     47  274    0     1     .      8.761     1     0.37715
 ##  
 ##                                                                                 
 ##  
-##  Obs            t delta  art  drop id idu white age cd4   num     den      w
+##  Obs id idu white age cd4 drop delta  art     t     num     den      w
 ## 
-##    1        2.245   1    .      0   1  1    0    44 376 0.37715 0.54431 0.69290
-##    2        1.213   1    .      0   2  1    1    32 392 0.37715 0.26136 1.44301
-##    3           10   0   1.224   0   3  0    0    44 181 0.37715 0.52111 1.30062
-##    4         1.24   1    .      0   4  1    0    35 526 0.37715 0.36937 1.02106
-##    5        7.871   1    .      0   5  1    1    46 386 0.37715 0.54445 0.69272
-##    6        6.593   1   2.207   0   6  0    1    29 285 0.37715 0.20563 0.78408
-##    7        1.191   1    .      0   7  1    0    34 358 0.37715 0.33129 1.13843
-##    8        5.098   1   2.300   0   8  0    1    39 708 0.37715 0.43098 1.09460
-##    9        2.226   1    .      0   9  1    0    45 840 0.37715 0.61930 0.60899
-##   10        8.761   1    .      0  10  0    0    47 274 0.37715 0.59637 1.54314</code></pre>
+##    1  1  1    0    44 376   0    1    .     2.245 0.37715 0.54431 0.69290
+##    2  2  1    1    32 392   0    1    .     1.213 0.37715 0.26136 1.44301
+##    3  3  0    0    44 181   0    0   1.224 10.000 0.37715 0.52111 1.30062
+##    4  4  1    0    35 526   0    1    .     1.240 0.37715 0.36937 1.02106
+##    5  5  1    1    46 386   0    1    .     7.871 0.37715 0.54445 0.69272
+##    6  6  0    1    29 285   0    1   2.207  6.593 0.37715 0.20563 0.78408
+##    7  7  1    0    34 358   0    1    .     1.191 0.37715 0.33129 1.13843
+##    8  8  0    1    39 708   0    1   2.300  5.098 0.37715 0.43098 1.09460
+##    9  9  1    0    45 840   0    1    .     2.226 0.37715 0.61930 0.60899
+##   10 10  0    0    47 274   0    1    .     8.761 0.37715 0.59637 1.54314</code></pre>
 </div>
 <div id="r-5" class="section level4">
 <h4><span class="header-section-number">0.7.1.2</span> R</h4>
@@ -586,7 +586,7 @@ run;
 proc sort data=nm2; by id in; 
 proc sort data=dn2; by id in; 
 
-data mle.f; merge e nm2 dn2; by id in; retain num den;
+data mle.f; merge e(drop=num den) nm2 dn2; by id in; retain num den;
     if first.id then do; num=1; den=1; end;
     num=num*nm2;
     den=den*dn2;
@@ -612,10 +612,10 @@ proc means data=mle.f;
 ## Variable       N            Mean         Std Dev         Minimum         Maximum
 ## --------------------------------------------------------------------------------
 ## w           4030       1.0164930       0.5081338       0.4207657       7.4901897
-## w2          4030       1.1598942       0.5137715       0.4032671       3.9971737
-## w3          4030       1.1261603       0.5970942       0.1728302      13.1870713
-## num         4030       0.5411448       0.2782323       0.3600046       0.9776632
-## den         4030       0.5381082       0.3097726       0.0917586       0.9940851
+## w2          4030       1.0011560       0.0862268       0.3545261       2.5326918
+## w3          4030       1.0159825       0.5036598       0.2960679       7.4248374
+## num         4030       0.9269853       0.0465738       0.8423067       0.9776632
+## den         4030       0.9261747       0.0591954       0.4960065       0.9940851
 ## --------------------------------------------------------------------------------</code></pre>
 </div>
 <div id="r-6" class="section level4">
@@ -653,17 +653,17 @@ table(split.dat$drop.rev) # now matches 127 drops in SAS data</code></pre>
 ##    0    1 
 ## 3909  127</code></pre>
 <pre class="r"><code>split.dat[split.dat$replicate==0,][1:10,] # check results</code></pre>
-<pre><code>##           t delta   art drop id idu white age cd4 replicate time0 drop.rev
-## 1165  1.604     0    NA    0  1   1     0  44 376         0 0.000        0
-## 2329  2.245     1    NA    0  1   1     0  44 376         0 1.604        0
-## 1166  1.213     1    NA    0  2   1     1  32 392         0 0.000        0
-## 1167  1.604     0 1.224    0  3   0     0  44 181         0 0.000        0
-## 2331  3.455     0 1.224    0  3   0     0  44 181         0 1.604        0
-## 3495  5.730     0 1.224    0  3   0     0  44 181         0 3.455        0
-## 4659  7.414     0 1.224    0  3   0     0  44 181         0 5.730        0
-## 5823 10.000     0 1.224    0  3   0     0  44 181         0 7.414        0
-## 1168  1.240     1    NA    0  4   1     0  35 526         0 0.000        0
-## 1169  1.604     0    NA    0  5   1     1  46 386         0 0.000        0</code></pre>
+<pre><code>##      id idu white age cd4 drop delta   art      t replicate time0 drop.rev
+## 1165  1   1     0  44 376    0     0    NA  1.604         0 0.000        0
+## 2329  1   1     0  44 376    0     1    NA  2.245         0 1.604        0
+## 1166  2   1     1  32 392    0     1    NA  1.213         0 0.000        0
+## 1167  3   0     0  44 181    0     0 1.224  1.604         0 0.000        0
+## 2331  3   0     0  44 181    0     0 1.224  3.455         0 1.604        0
+## 3495  3   0     0  44 181    0     0 1.224  5.730         0 3.455        0
+## 4659  3   0     0  44 181    0     0 1.224  7.414         0 5.730        0
+## 5823  3   0     0  44 181    0     0 1.224 10.000         0 7.414        0
+## 1168  4   1     0  35 526    0     1    NA  1.240         0 0.000        0
+## 1169  5   1     1  46 386    0     0    NA  1.604         0 0.000        0</code></pre>
 <pre class="r"><code># Use the reconfigured data to get censoring weights from ipw package.
 
 ipw.cens.weights = ipwtm(
@@ -813,7 +813,7 @@ proc print data=mle.f(obs=10); run;
 ## out         4030       4.7039797       2.9016192       0.0030000      10.0000000
 ## delta2      4030       0.1436725       0.3508008               0       1.0000000
 ## idu         4030       0.3449132       0.4753989               0       1.0000000
-## w3          4030       1.1261603       0.5970942       0.1728302      13.1870713
+## w3          4030       1.0159825       0.5036598       0.2960679       7.4248374
 ## --------------------------------------------------------------------------------
 ##  
 ##                                                                                 
@@ -838,9 +838,9 @@ proc print data=mle.f(obs=10); run;
 ##                  Without           With
 ## Criterion     Covariates     Covariates
 ## 
-## -2 LOG L        8303.272       8273.173
-## AIC             8303.272       8275.173
-## SBC             8303.272       8279.534
+## -2 LOG L        7799.965       7766.602
+## AIC             7799.965       7768.602
+## SBC             7799.965       7772.963
 ## 
 ## 
 ##                  Analysis of Maximum Likelihood Estimates
@@ -848,54 +848,54 @@ proc print data=mle.f(obs=10); run;
 ##                   Parameter     Standard   StdErr
 ## Parameter   DF     Estimate        Error    Ratio   Chi-Square   Pr &gt; ChiSq
 ## 
-## idu          1      0.46080      0.09311    1.129      24.4920       &lt;.0001
+## idu          1      0.49333      0.09057    1.079      29.6681       &lt;.0001
 ## 
 ##   Analysis of Maximum Likelihood Estimates
 ##  
 ##               Hazard      95% Hazard Ratio
 ## Parameter      Ratio      Confidence Limits
 ## 
-## idu            1.585       1.321       1.903
+## idu            1.638       1.371       1.956
 ##  
 ##                                                                                 
 ##  
 ## IP-weighted Cox model
 ## 
 ##  
-##                   d             w
-##                   e       d     h
-##   O               l   a   r   i i  a  c     n       d                p     p
-##   b               t   r   o i d t  g  d     u       e                2     4
-##   s        t      a   t   p d u e  e  4     m       n       w    z   0     0
+##          w          d
+##          h        d e                                                   p
+##   O    i i  a  c  r l   a                      p     p     p     p      1
+##   b  i d t  g  d  o t   r                      2     4     6     8   p  0
+##   s  d u e  e  4  p a   t      t      w    z   0     0     0     0   0  0
 ## 
-##    1        2.245 1  .    0 1 1 0 44 376 0.97766 0.98961 0.69290 1 1.613 3.455
-##    2        2.245 1  .    0 1 1 0 44 376 0.36678 0.53763 0.69290 1 1.613 3.455
-##    3        1.213 1  .    0 2 1 1 32 392 0.97766 0.98168 1.44301 1 1.613 3.455
-##    4           10 0 1.224 0 3 0 0 44 181 0.97766 0.98384 1.30062 1 1.613 3.455
-##    5           10 0 1.224 0 3 0 0 44 181 0.36678 0.51117 1.30062 1 1.613 3.455
-##    6           10 0 1.224 0 3 0 0 44 181 0.36459 0.50922 1.30062 1 1.613 3.455
-##    7           10 0 1.224 0 3 0 0 44 181 0.36209 0.50707 1.30062 1 1.613 3.455
-##    8           10 0 1.224 0 3 0 0 44 181 0.36000 0.50501 1.30062 1 1.613 3.455
-##    9         1.24 1  .    0 4 1 0 35 526 0.97766 0.98640 1.02106 1 1.613 3.455
-##   10        7.871 1  .    0 5 1 1 46 386 0.97766 0.98544 0.69272 1 1.613 3.455
+##    1 1 1 0 44 376 0 1  .     2.245 0.69290 1 1.613 3.455 5.791 7.414 0 10
+##    2 1 1 0 44 376 0 1  .     2.245 0.69290 1 1.613 3.455 5.791 7.414 0 10
+##    3 2 1 1 32 392 0 1  .     1.213 1.44301 1 1.613 3.455 5.791 7.414 0 10
+##    4 3 0 0 44 181 0 0 1.224 10.000 1.30062 1 1.613 3.455 5.791 7.414 0 10
+##    5 3 0 0 44 181 0 0 1.224 10.000 1.30062 1 1.613 3.455 5.791 7.414 0 10
+##    6 3 0 0 44 181 0 0 1.224 10.000 1.30062 1 1.613 3.455 5.791 7.414 0 10
+##    7 3 0 0 44 181 0 0 1.224 10.000 1.30062 1 1.613 3.455 5.791 7.414 0 10
+##    8 3 0 0 44 181 0 0 1.224 10.000 1.30062 1 1.613 3.455 5.791 7.414 0 10
+##    9 4 1 0 35 526 0 1  .     1.240 1.02106 1 1.613 3.455 5.791 7.414 0 10
+##   10 5 1 1 46 386 0 1  .     7.871 0.69272 1 1.613 3.455 5.791 7.414 0 10
 ## 
-##                                      d
-##                                      e _
-##                     p                l d
-##   O    p     p      1            o   t r    n       d
-##   b    6     8   p  0     i      u   a o    m       n       w       w
-##   s    0     0   0  0 k   n      t   2 p    2       2       2       3
+##                     d
+##                     e _
+##                     l d
+##   O             o   t r    n       d       n       d
+##   b      i      u   a o    m       n       u       e       w       w
+##   s  k   n      t   2 p    2       2       m       n       2       3
 ## 
-##    1 5.791 7.414 0 10 1 0.000  1.613 0 0 0.97766 0.98961 0.98792 0.68453
-##    2 5.791 7.414 0 10 2 1.613  2.245 1 0 0.97250 0.98773 0.68221 0.47270
-##    3 5.791 7.414 0 10 1 0.000  1.213 1 0 0.97766 0.98168 0.99591 1.43711
-##    4 5.791 7.414 0 10 1 0.000  1.613 0 0 0.97766 0.98384 0.99372 1.29245
-##    5 5.791 7.414 0 10 2 1.613  3.455 0 0 0.97250 0.98093 0.71752 0.93321
-##    6 5.791 7.414 0 10 3 3.455  5.791 0 0 0.96671 0.97718 0.71599 0.93122
-##    7 5.791 7.414 0 10 4 5.791  7.414 0 0 0.96006 0.97305 0.71408 0.92875
-##    8 5.791 7.414 0 10 5 7.414 10.000 0 0 0.95455 0.96911 0.71286 0.92716
-##    9 5.791 7.414 0 10 1 0.000  1.240 1 0 0.97766 0.98640 0.99114 1.01202
-##   10 5.791 7.414 0 10 1 0.000  1.613 0 0 0.97766 0.98544 0.99211 0.68725</code></pre>
+##    1 1 0.000  1.613 0 0 0.97766 0.98961 0.97766 0.98961 0.98792 0.68453
+##    2 2 1.613  2.245 1 0 0.97250 0.98773 0.95077 0.97747 0.97269 0.67398
+##    3 1 0.000  1.213 1 0 0.97766 0.98168 0.97766 0.98168 0.99591 1.43711
+##    4 1 0.000  1.613 0 0 0.97766 0.98384 0.97766 0.98384 0.99372 1.29245
+##    5 2 1.613  3.455 0 0 0.97250 0.98093 0.95077 0.96508 0.98517 1.28133
+##    6 3 3.455  5.791 0 0 0.96671 0.97718 0.91912 0.94306 0.97462 1.26761
+##    7 4 5.791  7.414 0 0 0.96006 0.97305 0.88242 0.91764 0.96162 1.25069
+##    8 5 7.414 10.000 0 0 0.95455 0.96911 0.84231 0.88930 0.94716 1.23189
+##    9 1 0.000  1.240 1 0 0.97766 0.98640 0.97766 0.98640 0.99114 1.01202
+##   10 1 0.000  1.613 0 0 0.97766 0.98544 0.97766 0.98544 0.99211 0.68725</code></pre>
 </div>
 <div id="r-8" class="section level4">
 <h4><span class="header-section-number">0.7.4.2</span> R</h4>
