update course plan

--- a/syllabus-1.html
+++ b/syllabus-1.html
@@ -140,12 +140,12 @@ img {
 </tr>
 <tr class="even">
 <td align="left">Thursday 2/25</td>
-<td align="left">Smoothing and splines</td>
+<td align="left">Discussion-Review 1 (interpreting point estimates)</td>
 <td align="left">Brookhart</td>
 </tr>
 <tr class="odd">
 <td align="left">Tuesday 3/1</td>
-<td align="left">Exam preview</td>
+<td align="left">Discussion-Review 2 (class questions)</td>
 <td align="left">Brookhart/Cole</td>
 </tr>
 <tr class="even">
@@ -252,7 +252,7 @@ img {
 <p>15. Cole SR, Chu H, Greenland S. Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer. <em>Am. J. Epidemiol.</em> [electronic article]. 2014;179(2):252–260. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245</a>)</p>
 <p>16. Cole SR, Chu H, Greenland S, et al. Bayesian Posterior Distributions Without Markov Chains. <em>Am. J. Epidemiol.</em> [electronic article]. 2012;175(5):368–375. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433</a>)</p>
 <p>17. Cole SR, Hudgens MG. Survival analysis in infectious disease research: Describing events in time: <em>AIDS</em> [electronic article]. 2010;24(16):2423–2431. (<a href="http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001" class="uri">http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&amp;an=00002030-201010230-00001</a>)</p>
-<p>18. Cole SR, HernC!n MA. Adjusted survival curves with inverse probability weights. <em>Comput. Methods Programs Biomed.</em> [electronic article]. 2004;75(1):45–49. (<a href="http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378" class="uri">http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378</a>)</p>
+<p>18. Cole SR, Hernan MA. Adjusted survival curves with inverse probability weights. <em>Comput. Methods Programs Biomed.</em> [electronic article]. 2004;75(1):45–49. (<a href="http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378" class="uri">http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378</a>)</p>
 <p>19. Buchanan AL, Hudgens MG, Cole SR, et al. Worth the Weight: Using Inverse Probability Weighted Cox Models in AIDS Research. <em>AIDS Res. Hum. Retroviruses</em> [electronic article]. 2014;30(12):1170–1177. (<a href="http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037" class="uri">http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037</a>)</p>
 <p>20. Cole SR, Stuart EA. Generalizing Evidence From Randomized Clinical Trials to Target Populations: The ACTG 320 Trial. <em>Am. J. Epidemiol.</em> [electronic article]. 2010;172(1):107–115. (<a href="http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084" class="uri">http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084</a>)</p>
 <p>21. Greenland S, Finkle WD. A critical look at methods for handling missing covariates in epidemiologic regression analyses. <em>Am. J. Epidemiol.</em> 1995;142(12):1255–1264. </p>
