--- a/ipw-cox.html
+++ b/ipw-cox.html
@@ -621,27 +621,22 @@ proc means data=mle.f;
 <div id="r-6" class="section level4">
 <h4><span class="header-section-number">0.7.2.2</span> R</h4>
 <pre class="r"><code># Set up the data frame with counting process style data
-b$replicate=0
 b.dt = data.table(b)
+
 # try to get quantiles as close to SAS as possible
 # documentation for quantile function in R says type 3
 quantile(b.dt[b.dt$drop==1, with=T]$t, probs=c(0.20, 0.40, 0.60, 0.80), type=3) # check these quantiles with SAS. Close.</code></pre>
 <pre><code>##   20%   40%   60%   80% 
 ## 1.604 3.455 5.730 7.414</code></pre>
-<pre class="r"><code># function that can be used with replicates if you bootstrap. no boostrap in this example.
-split.1 = function(i){
-    quint = c(0, max(b$t), 
-              as.numeric(quantile(b.dt[b.dt$replicate==i &amp; 
-                                         b.dt$drop==1, with=T]$t,
-                                  probs=c(0.20, 0.40, 0.60, 0.80), type=3)))
-    survSplit(data=b.dt[b.dt$replicate==i,], 
+<pre class="r"><code>quint = c(0, max(b$t), 
+          as.numeric(quantile(b.dt[b.dt$drop==1, with=T]$t,
+                                   probs=c(0.20, 0.40, 0.60, 0.80), type=3)))
+
+split.dat = survSplit(data=b.dt,
               cut=as.numeric(quint), 
               end=&quot;t&quot;, 
               start=&quot;time0&quot;, 
               event=&quot;delta&quot;) #survSplit function from the survival package will create a counting process style data frame for you.
-  }
-
-split.dat = split.1(0) # Replicate 0 is the observed data.
 
 # IMPORTANT: Fix the drop variable. Only want the drop status (if =1) to show at last record
 split.dat = split.dat[order(split.dat$id),] # order so I can check in SAS
@@ -652,18 +647,18 @@ table(split.dat$drop.rev) # now matches 127 drops in SAS data</code></pre>
 <pre><code>## 
 ##    0    1 
 ## 3909  127</code></pre>
-<pre class="r"><code>split.dat[split.dat$replicate==0,][1:10,] # check results</code></pre>
-<pre><code>##      id idu white age cd4 drop delta   art      t replicate time0 drop.rev
-## 1165  1   1     0  44 376    0     0    NA  1.604         0 0.000        0
-## 2329  1   1     0  44 376    0     1    NA  2.245         0 1.604        0
-## 1166  2   1     1  32 392    0     1    NA  1.213         0 0.000        0
-## 1167  3   0     0  44 181    0     0 1.224  1.604         0 0.000        0
-## 2331  3   0     0  44 181    0     0 1.224  3.455         0 1.604        0
-## 3495  3   0     0  44 181    0     0 1.224  5.730         0 3.455        0
-## 4659  3   0     0  44 181    0     0 1.224  7.414         0 5.730        0
-## 5823  3   0     0  44 181    0     0 1.224 10.000         0 7.414        0
-## 1168  4   1     0  35 526    0     1    NA  1.240         0 0.000        0
-## 1169  5   1     1  46 386    0     0    NA  1.604         0 0.000        0</code></pre>
+<pre class="r"><code>split.dat[1:10,] # check results</code></pre>
+<pre><code>##      id idu white age cd4 drop delta   art      t time0 drop.rev
+## 1165  1   1     0  44 376    0     0    NA  1.604 0.000        0
+## 2329  1   1     0  44 376    0     1    NA  2.245 1.604        0
+## 1166  2   1     1  32 392    0     1    NA  1.213 0.000        0
+## 1167  3   0     0  44 181    0     0 1.224  1.604 0.000        0
+## 2331  3   0     0  44 181    0     0 1.224  3.455 1.604        0
+## 3495  3   0     0  44 181    0     0 1.224  5.730 3.455        0
+## 4659  3   0     0  44 181    0     0 1.224  7.414 5.730        0
+## 5823  3   0     0  44 181    0     0 1.224 10.000 7.414        0
+## 1168  4   1     0  35 526    0     1    NA  1.240 0.000        0
+## 1169  5   1     1  46 386    0     0    NA  1.604 0.000        0</code></pre>
 <pre class="r"><code># Use the reconfigured data to get censoring weights from ipw package.
 
 ipw.cens.weights = ipwtm(
